force-app/main/default/objects/TenXSettings__c/TenXSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>TenXSettings</label>
</CustomObject>