force-app/main/default/objects/TenXSettings__c/fields/API_Endpoint_Sandbox__c.field-meta.xml
<CustomField>
    <fullName>API_Endpoint_Sandbox__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>API_Endpoint.Sandbox</label>
    <required>true</required>
    <type>Url</type>
</CustomField>