force-app/main/default/objects/TenXSettings__c/fields/API_Patient_Portal_Endpoint_Sandbox__c.field-meta.xml
<CustomField>
    <fullName>API_Patient_Portal_Endpoint_Sandbox__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>API Patient Portal Endpoint Sandbox</label>
    <type>Url</type>
</CustomField>