force-app/main/default/objects/TenXSettings__c/fields/API_Username_Sandbox__c.field-meta.xml
<CustomField>
    <fullName>API_Username_Sandbox__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>API_Username.Sandbox</label>
    <length>50</length>
    <type>Text</type>
</CustomField>