force-app/main/default/objects/TenXSettings__c/fields/Default_Main_Practitioner_Account__c.field-meta.xml
<CustomField>
    <fullName>Default_Main_Practitioner_Account__c</fullName>
    <description>This is used to set the default main practitioner when trying to sync brand-new accounts to the EHR</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Default Main Practitioner Account</label>
    <length>18</length>
    <type>Text</type>
</CustomField>