force-app/main/default/objects/TenXSettings__c/fields/DrChrono_Production_Client_Secret__c.field-meta.xml
<CustomField>
    <fullName>DrChrono_Production_Client_Secret__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>DrChrono Production Client Secret</label>
    <length>255</length>
    <type>Text</type>
</CustomField>