force-app/main/default/objects/TenXSettings__c/fields/DrChrono_Sandbox_Base_URL__c.field-meta.xml
<CustomField>
    <fullName>DrChrono_Sandbox_Base_URL__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>DrChrono Sandbox Base URL</label>
    <type>Url</type>
</CustomField>