force-app/main/default/objects/TenXSettings__c/fields/GeneTest_Clinic_Name__c.field-meta.xml
<CustomField>
    <fullName>GeneTest_Clinic_Name__c</fullName>
    <description>Default gene test clinic name</description>
    <encryptionScheme>None</encryptionScheme>
    <label>GeneTest Clinic Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>