force-app/main/default/objects/TenXSettings__c/fields/GeneTest_Order_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>GeneTest_Order_Endpoint__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>GeneTest Order Endpoint</label>
    <required>true</required>
    <type>Url</type>
</CustomField>